syntax = "proto3";

import "google/protobuf/empty.proto";
package KDIPgRPC_proto;

service KDIP_NetService{
  // ★ (Unary) Client Signal Channel
  // Server <-- Client
  rpc ClientSignalService (Message) returns (Message);

  // ★ (Server Streaming) Monitoring Channel
  // Server  --> Client
  rpc VisionDataService(Message) returns (ImageDataPacket);

}

message Message
{
	string UserID = 1;
	string UserMessage =2;
}

message ImageDataPacket
{
	string Name = 1;
	int32 LayerNum = 2;
	bytes Datas = 3;
}